Terminamos ediciones y tips básicos

--- a/src/01-edicion/10-terminal.html
+++ b/src/01-edicion/10-terminal.html
@@ -3,8 +3,8 @@
 *        Ocultar Mostrar terminal
 *    
 *    tips:
-*        ⌃ `
-*        Ctrl + `
+*        ⌃ Alt T
+*        Ctrl + Alt + T
 * * ------------------------------->
 
 
