--- a/src/01-edicion/04-comentarios.html
+++ b/src/01-edicion/04-comentarios.html
@@ -14,7 +14,7 @@
     <span>Hola</span>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Eum maiores nostrum cum quasi totam.
+        Eum maiores <!-- nostrum cum quasi totam. -->
     </p>
 </div>
 
